fix: share link url text wrapping on mobile
Patch: text overflow ellipsis set for mobile media rule (max-width: 450px)

--- a/styles/global.css
+++ b/styles/global.css
@@ -1267,6 +1267,13 @@ a:visited {
     .browsers svg {
         margin-left: -2px;
     }
+
+    .results-share__wrapper {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        max-width: 100%;
+    }
     
 }
 
